@@ -2,22 +2,22 @@
 Hash: SHA256
 
 DIST yubico-pam-2.20.tar.gz 71152 SHA256 8fc94e7fd6494975eb805797be329cdfaa255b634bf91810bef23f9c8fc0b185 SHA512 336f6fd08ed6cad082e16528baaf66cda4fcfbed1311d514760934f1aa22febc7e1e929e0905d05bbeb453f04388b25cbbdca6f07a4afb71a05e705634c1ea64 WHIRLPOOL b69b67c94c43cb78fa04c9c70fcda6d3c1ccd17c838241f67d21895546141cf580060d54c300751631970aa59a8b1f43afb51a0170a5def9a69874f8b485dd02
+DIST yubico-pam-2.24.tar.gz 72865 SHA256 4e21056f35eee0795918ea394173ab8d4f52629498baf38e86ece5b7a8306d55 SHA512 76aee8afeae2abcf6438c761c2ecab75300598ecfea8abf0fde854500f22a26f78d98a8b7bb25078acf12c5d453976ffb8685ae33c6d63ffa289e3c058a283d7 WHIRLPOOL 3894d7b89f41156dc8f19c30a01f3996fc83aa2b0b6ec49093bed7c8381c1fae54d798a84425d44b7f48f8fe76331b34a5f84addc3b79a87a8bae2dce05b1f00
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQJ8BAEBCABmBQJWXe4TXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
-RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59INoQANK9YPY35mwhXVctcabJld9z
-1XJvI3AayI2REedReS/5vuV5vAlTK65gmj1j5W49ZI7p4gFKd/eMkg/mnGKJKK8g
-OkV4vDHRAwB8x1E3lZphpT5vdKidCU7lEVjK+6fXyiHJVCa1rWvMkIXBqmj8EBcA
-L20Oss8buiv6CEb/cPef7fZO4OgKJcIdVi82RLlz8BHrUPSF0r8IcRaevtbM2QfB
-bGxIBqxTZHafU1NzPfLwz692OTSAxKLaW1YXShKhqPV4ni2jD4ARKrWftpBoE9B2
-miwUmK54kd0AoOEvdGk/xMozQDcxBv/k4ki1B97BOrc92SDVLO+CdUmiy20rfNJz
-CsoNpHEKSlIdyRoBi88JJG9thjjXoNK3NXL1mlrfqOPrJiMO8COWEGuCZEqgSqVm
-LqiQGMr5cotryjqctjHDHEXR2OLwZg4hcU96UFVn+ws8Hy+1bXfXp8mZ1k4sxAzg
-pMOwfIzLgoGiorCcWeFaHeP/noN7bGSkARh3g2tSsf/0NQyT893Bku3Th98bSwjY
-YltZdEM8QW5mEvIEKnIp2Zn6Yl0ulQjKZMLwDYhheUoddf+Rsayni6ruF0QxY8uu
-zFOWzCgwt4vMhTHohqHKdz0CXUG1Nq5TZjO2ygI3hCTlIUx7ZzrOWxs4IMFGUZnN
-mLNqoWLHDAikIjNpVf3C
-=VljG
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlhzjUlfFIAAAAAALgAo
+aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
+QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
+Hn1rSw//Qt29d1Ny977CR52wnvXNcqRdqVdlIHmSMA2GXx7Hu4JU88KnO6yJLP5D
+f+foww6LIRv3VVxIGNL192en/hMldnJQGkTbGpNVKuRfdEiA3MxVPIKOVgduwJuv
+JMP2UQLuIknzRdq7cN3voyPFEX384Yq/Oa32tqTc4uFiLRFfVnYH+0ewHrwLAJNm
+LeMSRqtiLLeGIZ9ysX17hu32FoCarjJ+WBarsO5E//1NvEcb9RaCBGeayDwkYWJE
+HKjMNs9NoqdxBb3JyqoN84DCONpDXVMmPnaVGf5Ol4Y2P5pIN7GWI0qM59D0YPDn
+2D8ZIuNTayEcj3el5X2U8azsELf8QmJkRJ8z7xA84iMMQTB9ZGfBQzl+aJliSOws
+SHa/rDtq0/DNyOC/c+ntToOBTv4GoLmzZ5wWwyyhImGoGkiNAEebodTyqi6iZuEH
+m8tOx2PNKgRYhCmWRcQalkRtiellHVXPq7xrQAYv/1nI+2Et1G3DTQKnmx/IP86d
+rQNIsegwLPczdh8thBdfLhUMME+9gutYCJYL4LLfQNjIZAiTlTU1POcJVPiczv/l
+tVvQPwXWHZHg4IxX5915WkDPbBF1PvFA9M+Z2JtXFHgdFyeCUOAaiY76V4ltp1NV
+uTYsgDh24qmufGUzw+ctU8YbUi9GhPRv9QQ+Z0ps4ZhhJsUpgnU=
+=c1yk
 -----END PGP SIGNATURE-----
